--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,82 @@
-crawl4ai
-fastapi
-uvicorn
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Crawl4AI==0.5.0.post8
+cryptography==44.0.2
+cssselect==1.3.0
+distro==1.9.0
+fake-http-header==0.3.5
+fake-useragent==2.1.0
+fastapi==0.115.12
+faust-cchardet==2.1.19
+filelock==3.18.0
+frozenlist==1.5.0
+fsspec==2025.3.2
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.30.2
+humanize==4.12.2
+idna==3.10
+importlib_metadata==8.6.1
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+litellm==1.65.7
+lxml==5.3.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.4.3
+nltk==3.9.1
+numpy==2.2.4
+openai==1.72.0
+packaging==24.2
+pillow==10.4.0
+playwright==1.51.0
+propcache==0.3.1
+psutil==7.0.0
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+pyee==12.1.1
+Pygments==2.19.1
+pyOpenSSL==25.0.0
+pyperclip==1.9.0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.24.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.6
+starlette==0.46.1
+tf-playwright-stealth==1.1.2
+tiktoken==0.9.0
+tokenizers==0.21.1
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.34.0
+xxhash==3.5.0
+yarl==1.19.0
+zipp==3.21.0
